syntax = "proto3";

package authentication;

enum Region {
  ASIA_PACIFIC = 0 ;
  EUROPE_AFRICA = 1 ;
  AMERICAS = 2 ;
  UNKNOWN = 3 ;
}

service AuthenticationService{
    rpc register(RegisterRequest) returns (RegisterResponse){}
    rpc login(LoginRequest) returns (LoginResponse){}
    rpc validate(ValidateRequest) returns (ValidateResponse){}
}

// Register

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string birthDate = 3;
  string email = 4;
  string password = 5;
  Region region = 6;
  string summary = 7;
}

// message RegisterResponse {
//   string firstName = 1;
//   string lastName = 2;
//   string email = 3;
// }

message RegisterResponse {
  int32 status = 1;
  repeated string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  repeated string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
}