syntax = "proto3";

package user;

enum Region {
  ASIA_PACIFIC = 0 ;
  EUROPE_AFRICA = 1 ;
  AMERICAS = 2 ;
  UNKNOWN = 3 ;
}

service UserService{
    rpc findOne(UserById) returns (User){}
    rpc findByEmail(UserByEmail) returns (User){}
    rpc createUser(CreateUserRequestDto) returns (User){}
}

message UserByEmail {
  string email = 1;
}

message UserById {
  string id = 1;
}


message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string summary = 5;
    Region region = 6;
    string password = 7;
}

message CreateUserRequestDto{
  string firstName = 1;
  string lastName = 2;
  string birthDate = 3;
  string email = 4;
  string password = 5;
  Region region = 6;
  string summary = 7;
}


